// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Payment / OrderSummary Avec Un Code Promo 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="css-1lo3bg0-Card order-summary"
    >
      <ul
        className="order-summary__details"
      >
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos billets
          </span>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={109.8}
          >
            109
            <span
              className="css-8pvupu-Price"
            >
              , 
              80
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Votre code promotion
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={-2}
          >
            -2
            <span
              className="css-8pvupu-Price"
            >
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos assurances
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={5.9}
          >
            5
            <span
              className="css-8pvupu-Price"
            >
              , 
              90
               
              €
            </span>
          </span>
        </li>
      </ul>
      <div
        className="order-summary__separator"
      />
      <p
        className="order-summary__total"
      >
        <span
          className="order-summary__total-label"
        >
          Total de votre commande
        </span>
        <span
          className="css-1rn2cu4-Price order-summary__total-price"
          data-price-currency="EUR"
          data-price-value={113.7}
        >
          113
          <span
            className="css-8pvupu-Price"
          >
            , 
            70
             
            €
          </span>
        </span>
      </p>
    </section>
  </div>
</div>
`;

exports[`Storyshots Payment / OrderSummary Avec Un Don 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="css-1lo3bg0-Card order-summary"
    >
      <ul
        className="order-summary__details"
      >
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos billets
          </span>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={109.8}
          >
            109
            <span
              className="css-8pvupu-Price"
            >
              , 
              80
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Votre don
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={1}
          >
            1
            <span
              className="css-8pvupu-Price"
            >
               
              €
            </span>
          </span>
        </li>
      </ul>
      <div
        className="order-summary__separator"
      />
      <p
        className="order-summary__total"
      >
        <span
          className="order-summary__total-label"
        >
          Total de votre commande
        </span>
        <span
          className="css-1rn2cu4-Price order-summary__total-price"
          data-price-currency="EUR"
          data-price-value={110.8}
        >
          110
          <span
            className="css-8pvupu-Price"
          >
            , 
            80
             
            €
          </span>
        </span>
      </p>
    </section>
  </div>
</div>
`;

exports[`Storyshots Payment / OrderSummary Billets Assurances 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="css-1lo3bg0-Card order-summary"
    >
      <ul
        className="order-summary__details"
      >
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos billets
          </span>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={109.8}
          >
            109
            <span
              className="css-8pvupu-Price"
            >
              , 
              80
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos assurances
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={5.9}
          >
            5
            <span
              className="css-8pvupu-Price"
            >
              , 
              90
               
              €
            </span>
          </span>
        </li>
      </ul>
      <div
        className="order-summary__separator"
      />
      <p
        className="order-summary__total"
      >
        <span
          className="order-summary__total-label"
        >
          Total de votre commande
        </span>
        <span
          className="css-1rn2cu4-Price order-summary__total-price"
          data-price-currency="EUR"
          data-price-value={115.7}
        >
          115
          <span
            className="css-8pvupu-Price"
          >
            , 
            70
             
            €
          </span>
        </span>
      </p>
    </section>
  </div>
</div>
`;

exports[`Storyshots Payment / OrderSummary Billets Uniquement 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="css-1lo3bg0-Card order-summary"
    >
      <p
        className="order-summary__total"
      >
        <span
          className="order-summary__total-label"
        >
          Total de votre commande
        </span>
        <span
          className="css-1rn2cu4-Price order-summary__total-price"
          data-price-currency="EUR"
          data-price-value={109.8}
        >
          109
          <span
            className="css-8pvupu-Price"
          >
            , 
            80
             
            €
          </span>
        </span>
      </p>
    </section>
  </div>
</div>
`;

exports[`Storyshots Payment / OrderSummary Cartes Uniquement 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="css-1lo3bg0-Card order-summary"
    >
      <p
        className="order-summary__total"
      >
        <span
          className="order-summary__total-label"
        >
          Total de votre commande
        </span>
        <span
          className="css-1rn2cu4-Price order-summary__total-price"
          data-price-currency="EUR"
          data-price-value={75.8}
        >
          75
          <span
            className="css-8pvupu-Price"
          >
            , 
            80
             
            €
          </span>
        </span>
      </p>
    </section>
  </div>
</div>
`;

exports[`Storyshots Payment / OrderSummary Tous Les Types 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <section
      className="css-1lo3bg0-Card order-summary"
    >
      <ul
        className="order-summary__details"
      >
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos billets
          </span>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={109.8}
          >
            109
            <span
              className="css-8pvupu-Price"
            >
              , 
              80
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos cartes de réduction
          </span>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={75.8}
          >
            75
            <span
              className="css-8pvupu-Price"
            >
              , 
              80
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Votre code promotion
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={-2}
          >
            -2
            <span
              className="css-8pvupu-Price"
            >
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Vos assurances
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={5.9}
          >
            5
            <span
              className="css-8pvupu-Price"
            >
              , 
              90
               
              €
            </span>
          </span>
        </li>
        <li
          className="order-summary__item"
        >
          <span
            className="order-summary__item-label"
          >
            Votre don
          </span>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-trash-alt fa-w-14 "
              data-icon="trash-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M32 464a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128H32zm272-256a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zm-96 0a16 16 0 0 1 32 0v224a16 16 0 0 1-32 0zM432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
          <span
            className="css-1rn2cu4-Price order-summary__item-price"
            data-price-currency="EUR"
            data-price-value={1}
          >
            1
            <span
              className="css-8pvupu-Price"
            >
               
              €
            </span>
          </span>
        </li>
      </ul>
      <div
        className="order-summary__separator"
      />
      <p
        className="order-summary__total"
      >
        <span
          className="order-summary__total-label"
        >
          Total de votre commande
        </span>
        <span
          className="css-1rn2cu4-Price order-summary__total-price"
          data-price-currency="EUR"
          data-price-value={190.5}
        >
          190
          <span
            className="css-8pvupu-Price"
          >
            , 
            50
             
            €
          </span>
        </span>
      </p>
    </section>
  </div>
</div>
`;
